--- a/module4-solution/src/menudata/templates/menuitems.template.html
+++ b/module4-solution/src/menudata/templates/menuitems.template.html
@@ -1,6 +1,4 @@
-<ul>
+
 <p>Menu items for category: {{ menuitems.category }}</p>
-  <li ng-repeat="item in menuitems.items">
-	  {{ item.name }}
-  </li>
-</ul>
+<menudetails items="menuitems.items"></menudetails>
+
