--- a/module4-solution/src/menudata/templates/categories.template.html
+++ b/module4-solution/src/menudata/templates/categories.template.html
@@ -1,6 +1,6 @@
 <ul>
   <li ng-repeat="item in $ctrl.items"
-      ui-sref="mainList.menuitems({itemId: $index})">
+      ui-sref="menuitems({itemId: item.short_name})">
 	  {{ item.name }}
   </li>
 </ul>
